# LicenseTool

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/libs/: bj_license_v3_apply_v1.0.5_release.aar
app/src/androidTest/java/com/example/licenseapply/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ScopedUtfChars.h  main.cpp
app/src/main/java/com/example/licenseapply/: LicenseTool.java  MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/licenseapply/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
